--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Java Session 1</h1>
+    <h1> Java Session 1 - Voltus Inc.</h1>
     
         <script src="script1.js"></script>
 </body>
